log/build_2024-08-27_15-41-53/ur3/stderr.log
  File "/home/saba/workspaces/ramen_robot_ws/install/ur3/lib/python3.10/site-packages/ur3/ur3_negi_node.py", line 55
    def
       ^
SyntaxError: invalid syntax

